--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Image Filter</string>
+    
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+    
+    <string name="err_no_camera">Your device has no camera. WTF?</string>
+    <string name="err_no_image_storage_location">Failed to create an image storage location. Failing fast</string>
 </resources>
